issues with overlapping elements

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -10,30 +10,39 @@ $green-dark: #01473c;
 
 nav {
 	min-height: 94.16px;
-	top: 120px;
+	top: 150px;
+	color: white;
 	position: absolute !important;
 	&.fixed-top {
 		position: fixed !important;
 	}
 	width: 100%;
-	svg {
-		top: 7px;
+	border-color: white;
+	a.logo {
+		display: block;
 		width: 129px;
 		height: 84.16px;
 		position: absolute;
 		opacity: 0;
+		top: 7px;
+		z-index: 200;
 	}
 	div.centered-nav {
-		width: 100%;
-		margin-top: 53px;
+		position: absolute;
+		top: 53px;
+		left: 0;
+		right: 0;
+		z-index: 100;
 		text-align: center;
 		font-family: $font-family-monospace;
 		font-size: 20px;
 		a { 
-			color: white; 
-			padding: .25rem 1rem;
+			color: inherit; 
+			padding: .23rem 1rem .25rem;
 			& + a {
-				border-left: 1px solid white;
+				border-left-width: 1px;
+				border-left-style: solid;
+				border-color: inherit;
 			}
 		}
 	}	
